# mariadb-connector-c-playground

./: .gitignore  CMakeLists.txt  README.md  local-build.cmd
src/: main.c
